Trocando dotenv por NestJS/Config

--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,4 @@
-DB_USER='<USERNAME>'
-DB_PASS='<PASSWORD>'
+DATABASE_USERNAME='<USERNAME>'
+DATABASE_PASSWORD='<PASSWORD>'
+
+# Copie e Renomeie para .env | .env.development | .env.production
