--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     },
     "dependencies": {
         "@nestjs/common": "^9.0.0",
+        "@nestjs/config": "^2.2.0",
         "@nestjs/core": "^9.0.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^9.0.0",
-        "dotenv": "^16.0.3",
         "mysql2": "^2.3.3",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
