Alterando Acesso ao Banco de dados e gerando seeds via cmd
O método de acesso ao banco foi alterado de custom database provider para a implementação do @nestjs/typeorm.

Como não consegui rodar seeds via comando com o nestjs, utilizei o typeorm-extension para que isso fosse possível.

Fica como possibilidade feature futura implementar a geração de seeds de uma melhor maneira.

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,12 @@
-DATABASE_USERNAME='<USERNAME>'
-DATABASE_PASSWORD='<PASSWORD>'
+# GENERAL ENV VARIABLES
+NODE_ENV='development'
+PORT=3000
 
-# Copie e Renomeie para .env | .env.development | .env.production
+# DATABASE ENV VARIABLES
+DATABASE_HOST='localhost'
+DATABASE_PORT=3306
+DATABASE_USERNAME='root'
+DATABASE_PASSWORD=''
+DATABASE_SYNC=false
+
+# Copie e Renomeie para .env
