--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "test:e2e": "jest --config ./test/jest-e2e.json",
         "db:create": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:create",
         "db:drop": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:drop",
-        "seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed"
+        "seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed --config './ormconfig.js' --dataSource './database/data-source.ts'"
     },
     "dependencies": {
         "@nestjs/common": "^9.0.0",
@@ -37,6 +37,7 @@
         "@nestjs/core": "^9.0.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^9.0.0",
+        "@nestjs/typeorm": "^9.0.1",
         "mysql2": "^2.3.3",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
