Adicionada variável GAME_URL

--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,7 @@
 # GENERAL ENV VARIABLES
 NODE_ENV='development'
 API_URL='http://localhost:3000'
+GAME_URL='http://localhost:4200'
 PORT=3000
 
 # DATABASE ENV VARIABLES
