--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@nestjs/core": "^9.0.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^9.0.0",
+        "@nestjs/swagger": "^6.1.4",
         "@nestjs/typeorm": "^9.0.1",
         "mysql2": "^2.3.3",
         "reflect-metadata": "^0.1.13",
