--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,11 @@
 # GENERAL ENV VARIABLES
 NODE_ENV='development'
 API_URL='http://localhost:3000'
-GAME_URL='http://localhost:4200'
+ADMIN_URL='http://localhost:4200'
+GAME_URL='http://localhost:4000'
+# API_URL='http://api.communitymud.fastdevelopment.com.br'
+# ADMIN_URL='http://admin.communitymud.fastdevelopment.com.br'
+# GAME_URL='http://game.communitymud.fastdevelopment.com.br'
 PORT=3000
 
 # DATABASE ENV VARIABLES
